--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
         button {
             padding: 10px;
             cursor: pointer;
-            border-radius: 15px; /* 더 둥글게 수정 */
+            border-radius: 15px; /* 더 둥글게 수정! */
             transition: background-color 0.3s ease;
             font-weight: 500; /* 폰트 두께 수정 */
             font-family: 'TheJamsil', sans-serif; /* 폰트 적용 */
